# Please use ONLY the following formatting in this Changelog:                 #
# @DATE @PERSON                                                               #
# 	* @CHANGE                                                                 #
#                                                                             #
# @DATE is date of commiting to CVS (changes that are not commited to         #
#	CVS should NEVER be added to Changelog). Local time is ok.                #
# @PERSON is the full REAL name of the one commiting to CVS (not necceserely  #
#	the code author). If you wish to add your nick/handle, add it after       #
#	your name in parenthesis.                                                 #
# @CHANGE is a short description of the modification done. If you are not     #
#	the author of parts/all of the code, add note about the original          #
#	author in parenthesis.                                                    #
#                                                                             #
# ALWAYS keep line lenghts UNDER/AT 80 characters.                            #
# ALL ChangeLog entries end with a dot.                                       #
#                                                                             #
# The purpose of this Changelog is not to keep track of all changes to CVS    #
# (thats what CVS logs are for), but rather as a diary for code changing.     #
# This also helps in backtracking changes, or reviewing development history.  #
###############################################################################

2004/03/25 Mikael Barbeaux
	* Implemented activeUser method of UserManagement.
	* Implemented getUsersToActive method of UserManagement.
	* Implemented first version of UserManagement session bean.
	* Implemented addUser method of UserCreation.
	* Implemented first version of UserCreation session bean.

2004/03/24 Mikael Barbeaux
	* First revision of the project.