@@ -26,6 +26,9 @@
 # This also helps in backtracking changes, or reviewing development history.  #
 ###############################################################################
 
+2004/03/26 Mikael Barbeaux
+	* Added email field into addUser.
+
 2004/03/25 Mikael Barbeaux
 	* Implemented activeUser method of UserManagement.
 	* Implemented getUsersToActive method of UserManagement.
